--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 <!--Jumbo-->
-<div class="jumbotron">
+<div class="container">
+<div class="jumbotron text-center">
   <h1>Employee Roster</h1>
   <p>Welcome to your new position!</p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 </div>
 
 <!--Panel table-->
 <div class="panel panel-default">
-  <div class="panel-heading">
+  <div class="panel-heading" id="headingtable">
     <h3 class="panel-title">Current Employee</h3>
   </div>
   <div class="panel-body">
@@ -47,11 +47,10 @@
 <!--Panel Form-->
 
 <div class="panel panel-default">
-  <div class="panel-heading">
+  <div class="panel-heading" id="headingform">
     <h3 class="panel-title">Add Employee</h3>
   </div>
   <div class="panel-body">
-    Submit
 <form>
   <div class="form-group">
     <label for="exampleInputName">Full Name</label>
@@ -73,7 +72,7 @@
 </form>
   </div>
 </div>
-
+</div>
 
 
 
