--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
   </div>
   <div class="panel-body">
     <table class="table">
-  <tr>
-    <th>Employee Name</th>
-    <th>Role</th> 
-    <th>Start Date</th>
-    <th>Months Worked</th>
-    <th>Monthly Rate</th>
-    <th>Total Billed($)</th>
-  </tr>
-  <tr>
-    <td>Jill</td>
-    <td>Job</td> 
-    <td>50</td>
-    <td>Eve</td>
-    <td>Jackson</td> 
-    <td>94</td>
-  </tr>
+		  <tr>
+		    <th>Employee Name</th>
+		    <th>Role</th> 
+		    <th>Start Date</th>
+		    <th>Months Worked</th>
+		    <th>Monthly Rate</th>
+		    <th>Total Billed($)</th>
+		  </tr>
+		  <tr>
+		    <td>Jill</td>
+		    <td>Job</td> 
+		    <td>01/23/2222</td>
+		    <td>0</td>
+		    <td>1000</td> 
+		    <td>0</td>
+		  </tr>
 </table>
   </div>
 </div>
@@ -54,21 +54,21 @@
 <form>
   <div class="form-group">
     <label for="exampleInputName">Full Name</label>
-    <input type="name" class="form-control" id="exampleInputEmail1" placeholder="Name">
+    <input type="name" class="form-control" id="name" placeholder="Name">
   </div>
   <div class="form-group">
     <label for="exampleInputRole">Role</label>
-    <input type="role" class="form-control" id="exampleInputPassword1" placeholder="Your Position Here">
+    <input type="role" class="form-control" id="role" placeholder="Your Position Here">
   </div>
   <div class="form-group">
     <label for="exampleInputStart">Start Date (MM/DD/YYYY)</label>
-    <input type="Date" class="form-control" id="exampleInputPassword1" placeholder="">
+    <input type="Date" class="form-control" id="date" placeholder="">
   </div>
   <div class="form-group">
     <label for="exampleInputPay">Monthly Rate</label>
-    <input type="Pay" class="form-control" id="exampleInputPassword1" placeholder="1000">
+    <input type="Pay" class="form-control" id="rate" placeholder="1000">
   </div>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button type="submit" class="btn btn-default" id="button">Submit</button>
 </form>
   </div>
 </div>
@@ -81,6 +81,9 @@
   src="http://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
   crossorigin="anonymous"></script>
+  
+<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
   <script type="text/javascript" src = "assets/javascript.js" ></script>
+
 </body>
 </html>
